<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LandingScreen">

    <RelativeLayout
        android:id="@+id/text_layout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp">

        <TextView
            android:id="@+id/txt_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_m"
            android:textColor="@color/orange_color"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_a"
            android:layout_toEndOf="@id/txt_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_a"
            android:textColor="@color/white"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_t"
            android:layout_toEndOf="@id/txt_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_t"
            android:textColor="@color/orange_color"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_h"
            android:layout_toEndOf="@id/txt_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_h"
            android:textColor="@color/white"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_layout_two"
        android:layout_below="@+id/text_layout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/txt_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/heading_regular"
            android:text="@string/txt_q"
            android:textColor="@color/dark_orange_color"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_u"
            android:layout_toEndOf="@id/txt_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_u"
            android:textColor="@color/white"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/txt_u"
            android:fontFamily="@font/heading_regular"
            android:text="@string/txt_i"
            android:textColor="@color/dark_orange_color"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/txt_z"
            android:layout_toEndOf="@id/txt_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_z"
            android:textColor="@color/white"
            android:fontFamily="@font/heading_regular"
            android:textSize="70sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_logo"
        android:layout_below="@+id/text_layout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="300dp"
            android:layout_height="270dp"
            android:src="@drawable/te" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_start"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/button_text"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_background"
            android:text="Score Board"
            android:layout_below="@+id/start"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/button_text"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_logout_background"
            android:text="@string/btn_logout"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/score"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/button_text"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

</RelativeLayout>